# chemgine

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Chemgine.cpp  Chemgine.sln  Planning.txt  README.md  main.cpp  setup_ubuntu.sh
DefParse/: CMakeLists.txt  DefParse.vcxproj  Main.cpp
core/: CMakeLists.txt
core/include/: AdaptorData.hpp  BaseLabwareData.hpp  Bond.hpp  Buffer2D.hpp  ConstantEstimator.hpp  ContainerComponent.hpp  DataDumper.hpp  DataPoint.hpp  DoubleEnded.hpp  EstimationMode.hpp  FileStore.hpp  FlaskData.hpp  FormatUtils.hpp  HLine.hpp  Lab.hpp  LayerType.hpp  MathUtils.hpp  MetaUtils.hpp  Parsers.hpp  Point.hpp  PropertyPane.hpp  Regressors3D.hpp  STLUtils.hpp  Spline.hpp
core/include/atomics/: AtomRepository.hpp  Bond.hpp  BondType.hpp  BondedAtom.hpp
core/include/atomics/data/: AtomBaseData.hpp  AtomData.hpp  BaseComponentData.hpp  RadicalData.hpp
core/include/atomics/kinds/: Atom.hpp  AtomBase.hpp  Radical.hpp
core/include/data/: Accessor.hpp  DataStore.hpp  DataStoreAccessor.hpp  FileStore.hpp  Formulas.hpp  OOLDefRepository.hpp  OutlineDefRepository.hpp  Predefined.hpp
core/include/data/def/: DataDumper.hpp  DefinitionParser.hpp  FileAnalyzer.hpp  FileParser.hpp  Keywords.hpp  Location.hpp  Object.hpp  Parsers.hpp  PrintSettings.hpp  Printers.hpp
core/include/data/values/: Amount.hpp  Color.hpp  Constants.hpp  DataPoint.hpp  DynamicAmount.hpp  Polarity.hpp  Symbol.hpp  SymbolMatch.hpp  Unit.hpp  Value.hpp
core/include/estimators/: EstimationMode.hpp  EstimatorFactory.hpp  EstimatorParsers.hpp  EstimatorRepository.hpp  EstimatorSpecifier.hpp
core/include/estimators/kinds/: AffineEstimator.hpp  ConstantEstimator.hpp  DerivedEstimator.hpp  EstimatorBase.hpp  RegressionEstimator.hpp  SplineEstimator.hpp  UnitizedEstimator.hpp
core/include/global/: Charset.hpp  Precision.hpp  SizeTypedefs.hpp
core/include/graphics/: Collision.hpp  PropertyPane.hpp  ShapeFill.hpp  ShapeFillTexture.hpp
core/include/graphics/particles/: ParticleSystem.hpp  RandomizedParticle.hpp  Vapour.hpp
core/include/io/: ColoredString.hpp  Input.hpp  Log.hpp  StringTable.hpp
core/include/labware/: DrawablePort.hpp  Lab.hpp  LabwareConnection.hpp  LabwarePort.hpp  LabwareRepository.hpp  LabwareSystem.hpp  LabwareType.hpp  PortType.hpp
core/include/labware/data/: AdaptorData.hpp  BaseContainerLabwareData.hpp  BaseLabwareData.hpp  CondenserData.hpp  ContainerLabwareData.hpp  DrawableLabwareData.hpp  FlaskData.hpp  HeatSourceData.hpp  HeatsourceData.hpp
core/include/mixtures/: AggregationType.hpp  ContentInitializer.hpp  Layer.hpp  LayerContentIterator.hpp  LayerType.hpp  ReactantRef.hpp  STP.hpp  StateNucleator.hpp
core/include/molecules/: ASCIIStructurePrinter.hpp  MolecularStructure.hpp  MoleculeId.hpp  MoleculeRepository.hpp  MoleculeType.hpp
core/include/reactions/: Catalyst.hpp  Reactant.hpp  ReactantSet.hpp  ReactionNetwork.hpp  ReactionRepository.hpp  ReactionSpecifier.hpp  StructureRef.hpp
core/include/structs/: AverageStream.hpp  Buffer2D.hpp  Cloneable.hpp  CountedRef.hpp  CyclicRef.hpp  DirectedGraph.hpp  DoubleEnded.hpp  FlagField.hpp  HLine.hpp  ImmutableSet.hpp  KeyValueObject.hpp  MultiIndexMap.hpp  Point.hpp  Ref.hpp  Regressors2D.hpp  Regressors3D.hpp  SparseDirectedGraph.hpp  Spline.hpp  SystemMatrix.hpp  UndirectedEdge.hpp  UndirectedGraph.hpp
core/include/utils/: ASCII.hpp  Bin.hpp  Build.hpp  Casts.hpp  Concurrency.hpp  Exception.hpp  Format.hpp  Hash.hpp  Intrinsic.hpp  Math.hpp  Meta.hpp  Numeric.hpp  Path.hpp  Process.hpp  SFML.hpp  STL.hpp  String.hpp  Terminal.hpp  Type.hpp
core/src/: Atom.cpp  AtomData.cpp  BaseComponentData.cpp  Collision.cpp  DynamicAmount.cpp  EstimatorBase.cpp  EstimatorFactory.cpp  FileAnalyzer.cpp  FileParser.cpp  FlaskData.cpp  LayerContentIterator.cpp  MolecularStructure.cpp  PrintSettings.cpp  ReactionNetwork.cpp  ReactionSpecifier.cpp  Reactor.cpp
core/src/atomics/: AtomRepository.cpp  Bond.cpp  BondedAtom.cpp
core/src/data/: Constants.cpp  DataStore.cpp  DataStoreAccessor.cpp  FileStore.cpp  Formulas.cpp  OOLDefRepository.cpp  OutlineDefRepository.cpp  Predefined.cpp
core/src/estimators/: EstimatorFactory.cpp  EstimatorRepository.cpp  EstimatorSpecifier.cpp
core/src/graphics/: Collision.cpp  PropertyPane.cpp  ShapeFill.cpp  ShapeFillTexture.cpp
core/src/io/: ColoredString.cpp  Input.cpp  Log.cpp  StringTable.cpp
core/src/labware/: DrawablePort.cpp  Lab.cpp  LabwareConnection.cpp  LabwarePort.cpp  LabwareRepository.cpp  LabwareSystem.cpp
core/src/mixtures/: AggregationType.cpp  ContentInitializer.cpp  Layer.cpp  LayerContentIterator.cpp  LayerType.cpp  ReactantRef.cpp  StateNucleator.cpp
core/src/molecules/: ASCIIStructurePrinter.cpp  MolecularStructure.cpp  MoleculeRepository.cpp
core/src/reactions/: Catalyst.cpp  Reactant.cpp  ReactantSet.cpp  ReactionNetwork.cpp  ReactionRepository.cpp  ReactionSpecifier.cpp  StructureRef.cpp
core/src/structs/: Buffer2D.cpp  Regressors2D.cpp  Regressors3D.cpp  Repository.cpp  Spline.cpp  SystemMatrix.cpp
core/src/utils/: ASCII.cpp  Bin.cpp  Build.cpp  Concurrency.cpp  Format.cpp  Math.cpp  Path.cpp  Process.cpp  SFML.cpp  String.cpp  Terminal.cpp  Type.cpp
defparse/: CMakeLists.txt
defparse/src/: Main.cpp
gui_app/: CMakeLists.txt
gui_app/data/builtin/: atoms.cdef  radicals.cdef
gui_app/include/: UIContext.hpp
gui_app/include/Helpers/: DragNDropHelper.hpp
gui_app/include/helpers/: CursorHelper.hpp  DragNDropHelper.hpp
gui_app/src/: Main.cpp
gui_app/src/Helpers/: DragNDropHelper.cpp
gui_app/src/helpers/: CursorHelper.cpp  DragNDropHelper.cpp
test_app/: CMakeLists.txt
test_app/data/builtin/: atoms.cdef  radicals.cdef
test_app/include/common/: TestManager.hpp  TestSetup.hpp
test_app/include/perf/: PerfTest.hpp  PerformanceReport.hpp  TimingResult.hpp
test_app/include/unit/: UnitTest.hpp
test_app/src/: Main.cpp
test_app/src/common/: TestManager.cpp  TestSetup.cpp
test_app/src/perf/: PerfTest.cpp  PerformanceReport.cpp  TimingResult.cpp
test_app/src/unit/: UnitTest.cpp
(+974 files in other folders)
